<resources>
    <string name="app_name">众易付</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_alert">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_waitting">请稍候</string>
    <string name="title_progressbar">正在下载文件</string>
    <string name="noNetTips">请您确认已开通手机上网功能，并在手机上设置正确的上网方式</string>
    <string name="bank_no">银行卡号:</string>
    <string name="open_account_name">开   户   名:</string>
    <string name="open_account_bank">开户银行:</string>
    <string name="in_account_msg">入账信息</string>
    <string name="modify_pwd">修改密码</string>
    <string name="draw_money">提现</string>
    <string name="qrcode">生成二维码</string>
    <string name="upload_images">实名认证</string>
    <string name="more_setting">更多设置</string>
    <string name="conect">联系客服</string>
    <string name="exit_safity">安全退出</string>
    <string name="str_user_hint">请输入账号</string>
    <string name="str_pwd_hint">请输入密码</string>
    <string name="str_login">登    录</string>
    <string name="str_setting_title">更多</string>
    <string name="draw_lock_tips">绘制解锁图案</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_register"><u>注册</u></string>
    <string name="eid_login"><u>EID登录</u></string>
    <string name="register_deal">同意用户注册协议</string>
    <string name="forgetpwd_title">忘记密码</string>
    <string name="contacts_title">联系人列表</string>
    <string name="bank_branch_title">支行</string>
    <string name="upload_title">图片上传（3/3）</string>
    <string name="register_title">注册</string>
    <string name="eid_login_title">EID登录</string>
    <string name="upload_first_title">基本信息（1/3）</string>
    <string name="upload_second_title">账户信息（2/3）</string>
    <string name="upload_third_title">上传照片（3/3）</string>
    <string name="upload_first_name">申请人姓名</string>
    <string name="upload_first_name_h">请输入姓名</string>
    <string name="upload_first_id">身份证号码</string>
    <string name="upload_first_id_h">请输入身份证号码</string>
    <string name="upload_first_merchant_name">商户名称</string>
    <string name="upload_first_merchant_name_h">请输入商户名称</string>
    <string name="upload_first_scope">经营范围</string>
    <string name="upload_first_address">经营地址</string>
    <string name="upload_first_address_h">请输入经营地址</string>
    <string name="upload_first_serial">机器序列号</string>
    <string name="upload_first_serial_h">请在购买机器后输入序列号</string>
    <string name="upload_second_name">开户名</string>
    <string name="upload_second_name_h">请输入开户名</string>
    <string name="upload_second_bank">开户银行</string>
    <string name="upload_second_address">开户地点</string>
    <string name="upload_second_bank_address">银行网点</string>
    <string name="upload_second_bank_address_h">请输入银行网点</string>
    <string name="upload_second_account">银行账号</string>
    <string name="upload_second_account_h">请输入银行账号</string>
    <string name="about_title">关于系统</string>
    <string name="forgetpwd_tips">请输入注册时使用的手机号码，点击“获取验证码”按钮来获取验证码。将取得的验证码直接输入下边的文本框</string>
    <string name="forgetpwd_account">账号：</string>
    <string name="forgetpwd_securitycode">验证码:</string>
    <string name="forgetpwd_pwd">登录密码:</string>
    <string name="forgetpwd_pwd_confirm">确认密码:</string>
    <string name="forgetpwd_securitycode_hint">请输入验证码</string>
    <string name="forgetpwd_phone_hint">请输入手机号</string>
    <string name="forgetpwd_pwd_hint">设置密码，密码长度为6～10位</string>
    <string name="forgetpwd_pwd_confirm_hint">请再次输入密码</string>
    <string name="forgetpwd_pwd_tips">密码区分大小写，只能以数字或字母命名</string>
    <string name="forgetpwd_next">下一步</string>
    <string name="inputmoeny_title">输入金额</string>
    <string name="inputmoeny_click_swipe">点击刷卡</string>
    <string name="inputmoeny_cash"><u>现金记账</u></string>
    <string name="tranfer_list_title">交易列表</string>
    <string name="tranfer_detail_title">交易详情</string>
    <string name="tranfer_detail_date">交易日期</string>
    <string name="tranfer_detail_account">账号</string>
    <string name="tranfer_detail_money">交易金额</string>
    <string name="tranfer_detail_flow_num">交易流水号</string>
    <string name="tranfer_detail_merchant_name">商户名称</string>
    <string name="tranfer_detail_btn_revoke">撤销</string>
    <string name="app_list_header_refresh_down">下拉刷新</string>
    <string name="app_list_header_refreshing">正在刷新</string>
    <string name="app_list_header_refresh_up">松开刷新</string>
    <string name="app_list_header_refresh_last_update">上次更新于:%s</string>
    <string name="app_list_footer_more">更多</string>
    <string name="app_list_footer_loading">正在加载</string>
    <string name="str_about_access">访问公司主页</string>
    <string name="str_about_version">众易付 For Android V1.0.3</string>
    <string name="str_about_bottom1">---北京众人科技股份有限公司版权所有---</string>
    <string name="str_about_bottom2">Copyright © 2006-2014 by 众易付 All rights reserved</string>
    <string name="set_pwd_title">设置密码</string>
    <string name="modifypwd_title">修改密码</string>
    <string name="modifypwd_oldpwd">原密码</string>
    <string name="modifypwd_newpwd">新密码</string>
    <string name="modifypwd_confirmpwd">确认密码</string>
    <string name="modifypwd_oldpwd_hint">请输入原密码</string>
    <string name="modifypwd_newpwd_hint">请输入新密码</string>
    <string name="modifypwd_confirmpwd_hint">请输入确认密码</string>
    <string name="set_new_pwd">设置密码</string>
    <string name="set_new_pwd_h">设置密码,长度6～10位</string>
    <string name="set_confirm_pwd">确认密码</string>
    <string name="set_confirm_pwd_h">请再次输入密码</string>
    <string name="hand_sign_title">请签名</string>
    <string name="trade_success">结果</string>
    <string name="gesture_forget">忘记手势？</string>
    <string name="feedback_title">意见反馈</string>
    <string name="calculator_title">计算器</string>
    <string name="cash_delete"><u>删除</u></string>
    <string name="p_scope">请选择经营范围</string>
    <string name="confirm">确认</string>
    <string name="cardcard_title">卡卡转账</string>
    <string name="cardcard_in_name">转入卡卡主姓名</string>
    <string name="cardcard_in_name_h">请输入姓名</string>
    <string name="cardcard_out_name">转出卡卡主姓名</string>
    <string name="cardcard_out_name_h">请输入姓名</string>
    <string name="cardcard_papers_type">证件类型</string>
    <string name="cardcard_papers_num">证件号码</string>
    <string name="cardcard_papers_num_h">请输入证件号码</string>
    <string name="cardcard_papers_card_num">收款银行卡号</string>
    <string name="cardcard_papers_card_num_h">请输入卡号</string>
    <string name="cardcard_papers_amount">还款金额</string>
    <string name="cardcard_turn_amount">转账金额</string>
    <string name="cardcard_papers_amount_h">请输入金额</string>
    <string name="cardcard_papers_phone">手机号码</string>
    <string name="cardcard_papers_phone_h">请输入接收短信的手机号码</string>
    <string name="cardcard_papers_tips">资金到账后短信提醒</string>
    <string name="cardcard_papers_type_tips">请选择证件类型</string>
    <string name="creditcard_titles">信用卡还款</string>
    <string name="creditcard_card_num">信用卡卡号</string>
    <string name="recharge_title">手机充值</string>
    <string name="recharge_tips">请选择你要充值的面额</string>
    <string name="contacts_prompt">手机号不能为空</string>
    <string name="contacts_prompt_phone_illeg">手机号不合法</string>
    <string name="contacts_querying">正在查询...</string>
    <string name="my_account_title">我的帐户</string>
    <string name="my_account_balance">账户余额</string>
    <string name="my_account_amount">提现金额</string>
    <string name="my_account_amount_h">请输入提现金额</string>
    <string name="my_account_type">请选择提现方式</string>
    <string name="my_account_nomal">普通提现（免手续费）</string>
    <string name="my_account_fast">快速提现</string>
    <string name="drawmoney_tips">单日最低不得低于100元，最高不得高于100000元</string>
    <string name="drawmoney_pwd">密码</string>
    <string name="drawmoney_pwd_h">请输入登录密码</string>
    <string name="check_ticket">查看交易小票</string>
    <string name="dateSliderTitle">选择日期</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="fore">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="jia">+</string>
    <string name="jian">-</string>
    <string name="cheng">*</string>
    <string name="chu">/</string>
    <string name="dengyu">=</string>
    <string name="zhengfu">+/-</string>
    <string name="dihao">.</string>
    <string name="ping">x²</string>
    <string name="kai">√x</string>
    <string name="shanchu">DEL</string>
    <string name="shan">C</string>
    <string name="transferFlow">交易流水</string>
    <string name="cashFlow">现金流水</string>
</resources>