<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/forgetpwd_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topbarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bar_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:background="@drawable/btn_back" />

        <TextView
            style="@style/white_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/upload_second_title" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="12dip" >

        <TextView
            style="@style/black_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/upload_second_name" />

        <EditText
            android:id="@+id/et_name"
            style="@style/black_17"
            android:paddingLeft="8dip"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="35dip"
            android:background="@drawable/bg_borderbox"
            android:hint="@string/upload_second_name_h"
            android:singleLine="true" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dip"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="12dip" >

        <TextView
            style="@style/black_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/upload_second_address" />

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dip"
            android:orientation="horizontal">
            <Spinner
            android:id="@+id/spinner1"
            android:layout_weight="1"
            android:layout_marginRight="5dip"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:paddingLeft="8dip"
            android:drawSelectorOnTop="true"
            android:background="@drawable/selectbg"
            android:prompt="@string/p_scope" />
            <Spinner
            android:id="@+id/spinner2"
            android:layout_weight="1"
            android:layout_marginLeft="5dip"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:paddingLeft="8dip"
            android:drawSelectorOnTop="true"
            android:background="@drawable/selectbg"
            android:prompt="@string/p_scope" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dip"
        android:background="@color/gray" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="12dip" >

        <TextView
            style="@style/black_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/upload_second_bank" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:paddingLeft="8dip"
            android:layout_marginLeft="18dip"
            android:drawSelectorOnTop="true"
            android:background="@drawable/selectbg"
            android:prompt="@string/p_scope" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dip"
        android:background="@color/gray" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="12dip" >

        <TextView
            style="@style/black_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/upload_second_bank_address" />

        
        <Button
            style="@style/black_17"
            android:id="@+id/btn_bank_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dip"
            android:background="@drawable/bg_borderbox"
             />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dip"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="12dip" >

        <TextView
            style="@style/black_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/upload_second_account" />

        <EditText
            android:id="@+id/et_account"
            style="@style/black_17"
            android:paddingLeft="8dip"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dip"
            android:background="@drawable/bg_borderbox"
            android:hint="@string/upload_second_account_h"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dip"
        android:background="@color/gray" />


    <Button
        android:id="@+id/btn_confirm"
        style="@style/white_20"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="35dip"
        android:background="@drawable/btn"
        android:text="确 定" />

</LinearLayout>