<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topbarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bar_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:background="@drawable/btn_back"
            android:onClick="backAction" />

        <TextView
            style="@style/white_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tranfer_detail_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="20dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_gou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transfer_detail_gou" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/black_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="8dip"
        android:background="@color/gray" />

    <TextView
        style="@style/gray_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="8dip"
        android:text="@string/tranfer_detail_money" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_money_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_money_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="8dip"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="15dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/gray_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tranfer_detail_flow_num" />

            <TextView
                android:id="@+id/tv_flow_num"
                style="@style/gray_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:orientation="horizontal" >

            <TextView
                style="@style/gray_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tranfer_detail_date" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/gray_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:orientation="horizontal" >

            <TextView
                style="@style/gray_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tranfer_detail_account" />

            <TextView
                android:id="@+id/tv_account"
                style="@style/gray_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:orientation="horizontal" >

            <TextView
                style="@style/gray_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tranfer_detail_merchant_name" />

            <TextView
                android:id="@+id/tv_merchant_name"
                style="@style/gray_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dip" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="13dip"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btn_revoke"
        style="@style/white_20"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/btn"
        android:text="撤  销"
        android:visibility="gone" />

</LinearLayout>